# ros2-robotics-mastery

./: README.md  SETUP.md
install/: local_setup.sh  setup.sh
install/my_first_kinematics_pkg/lib/my_first_kinematics_pkg/: kinematics_calculator
install/my_first_kinematics_pkg/share/ament_index/resource_index/package_run_dependencies/: my_first_kinematics_pkg
install/my_first_kinematics_pkg/share/ament_index/resource_index/parent_prefix_path/: my_first_kinematics_pkg
install/my_first_kinematics_pkg/share/my_first_kinematics_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_first_kinematics_pkg/share/my_first_kinematics_pkg/cmake/: my_first_kinematics_pkgConfig-version.cmake  my_first_kinematics_pkgConfig.cmake
install/my_first_kinematics_pkg/share/my_first_kinematics_pkg/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/my_first_kinematics_pkg/: CMakeLists.txt  package.xml
src/my_first_kinematics_pkg/src/: kinematics_calculator.cpp
